{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 78,
  "lineage": "d3352a48-fb97-f8a7-b9cb-ce37b81c7388",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08cc3cfc3605630e2",
            "domain": "vpc",
            "id": "eipalloc-002dab283b25ef28a",
            "network_interface": "eni-0e1793fff90806950",
            "private_dns": "ip-10-0-0-247.eu-west-2.compute.internal",
            "private_ip": "10.0.0.247",
            "public_dns": "ec2-3-9-236-176.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.236.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_network_interface.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:847151757780:instance/i-013e0b1cacc1a31c4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-013e0b1cacc1a31c4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2b8ea85c0fb5ba0",
            "private_dns": "ip-10-0-0-43.eu-west-2.compute.internal",
            "private_ip": "10.0.0.43",
            "public_ip": "3.8.15.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-07537877e5ad46523",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c974451e10978544",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e661f97dc602e3c5"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01a63a801cc9430c4",
            "owner_id": "847151757780",
            "vpc_id": "vpc-0628a1ccd5544e98f"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af3efcf354ad6e26",
            "original_route_table_id": "rtb-04786dbb7e5962ea4",
            "route_table_id": "rtb-088b323c7e9fd8e82",
            "vpc_id": "vpc-0628a1ccd5544e98f"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0e1793fff90806950",
            "private_ip": "10.0.0.247",
            "private_ips": [
              "10.0.0.247"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-00ad02b57bd2eb36e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c974451e10978544"
          },
          "depends_on": [
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-088b323c7e9fd8e82",
            "owner_id": "847151757780",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a63a801cc9430c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0628a1ccd5544e98f"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:847151757780:security-group/sg-0e661f97dc602e3c5",
            "description": "Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e661f97dc602e3c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-security-group",
            "name_prefix": null,
            "owner_id": "847151757780",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0628a1ccd5544e98f"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:847151757780:subnet/subnet-0c974451e10978544",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0c974451e10978544",
            "map_public_ip_on_launch": false,
            "owner_id": "847151757780",
            "vpc_id": "vpc-0628a1ccd5544e98f"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:847151757780:vpc/vpc-0628a1ccd5544e98f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6476dc6538c8b5e",
            "default_route_table_id": "rtb-088b323c7e9fd8e82",
            "default_security_group_id": "sg-00ad02b57bd2eb36e",
            "dhcp_options_id": "dopt-0481dff28e0e8af9a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0628a1ccd5544e98f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-088b323c7e9fd8e82",
            "owner_id": "847151757780"
          }
        }
      ]
    }
  ]
}